modules/argocd/deploy_argocd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-server
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: local-cluster-worker4
      serviceAccountName: argocd-sa
      containers:
        - name: argocd-server
          image: localhost:5000/quay.io/argoproj/argocd:v2.10.7
          imagePullPolicy: IfNotPresent
          command: ["argocd-server"]
          args:
            - --basehref
            - /argocd
            - --insecure
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-repo-server
  template:
    metadata:
      labels:
        app: argocd-repo-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: local-cluster-worker4
      serviceAccountName: argocd-sa
      containers:
        - name: argocd-repo-server
          image: localhost:5000/quay.io/argoproj/argocd:v2.10.7
          imagePullPolicy: IfNotPresent
          command: ["argocd-repo-server"]
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-application-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-application-controller
  template:
    metadata:
      labels:
        app: argocd-application-controller
    spec:
      nodeSelector:
        kubernetes.io/hostname: local-cluster-worker4
      serviceAccountName: argocd-sa
      containers:
        - name: argocd-application-controller
          image: localhost:5000/quay.io/argoproj/argocd:v2.10.7
          imagePullPolicy: IfNotPresent
          command: ["argocd-application-controller"]
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: default
spec:
  type: NodePort
  selector:
    app: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30190
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /argocd(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
